fixed phone-popup on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -134,7 +134,7 @@
     position: fixed;
     z-index: 1; /* Sit on top */
     left: 0;
-    top: 0;
+    top: 80px;
     width: 100%;
     height: 100%;
     overflow: auto; /* Enable scroll if needed */
